#10 added class to div in additions block

--- a/src/blocks/additions/additions.pug
+++ b/src/blocks/additions/additions.pug
@@ -3,5 +3,5 @@ mixin additions({noBorder, title, desc, icon})
     - let noBorderClass = "additions--no-border"
   .additions(class=noBorderClass)
     .additions__title= title
-    div= desc
+    div.description= desc
     i.additions__icon.material-icons= icon
