#10 added classes to forms and other tags

--- a/src/blocks/enter-card/enter-card.pug
+++ b/src/blocks/enter-card/enter-card.pug
@@ -5,7 +5,7 @@ mixin enter-card()
   .enter-card
     .card-canvas
       h1.enter-card__title Войти
-      form(action="index.html", method="post")
+      form.enter-card-form(action="index.html", method="post")
         input.text-field.enter-card__field(type="text" placeholder="Email")
         input.text-field(type="password" placeholder="Пароль")
         .enter-card__enter-button
