#10 change mock-address

--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -7,7 +7,7 @@ mixin register-card()
   .register-card
     .card-canvas
       h1 Регистрация аккаунта
-      form.register-card-form(action="index.html", method="post")
+      form.register-card-form(action="/mock-address", method="post")
         .register-card__block
           input.text-field(placeholder="Имя").register-card__item
           input.text-field(placeholder="Фамилия").register-card__item
