--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -10,12 +10,12 @@ html
     - 
       var menu = [{
         text: "Home",
-        link: "#home",
+        link: "/mock-address",
         classes: ["menu__item", "menu__item--current"]
         },
         {
         text: "About Us",
-        link: "#about_us",
+        link: "/mock-address",
         classes: ["menu__item"]
         }, 
         {
@@ -24,28 +24,28 @@ html
         link: [
         {
           text: "First",
-          link: "#first",
+          link: "/mock-address",
           classes: ["submenu__item"]
         },
         {
           text: "Second",
-          link: "#second",
+          link: "/mock-address",
           classes: ["submenu__item"]
         }
         ]},
         {
         text: "Careers",
-        link: "#careers",
+        link: "/mock-address",
         classes: ["menu__item"]
         },
         {
         text: "News",
-        link: "#news",
+        link: "/mock-address",
         classes: ["menu__item"]
         },
         {
         text: "Documentation",
-        link: "#docs",
+        link: "/mock-address",
         classes: ["menu__item"]
       }];
     
@@ -69,27 +69,27 @@ html
             {
               title: "Navigation",
               links: [
-                { url: "index.html", text: "About Us" },
-                { url: "index.html", text: "News" },
-                { url: "index.html", text: "Support" },
-                { url: "index.html", text: "Products" },
+                { url: "/mock-address", text: "About Us" },
+                { url: "/mock-address", text: "News" },
+                { url: "/mock-address", text: "Support" },
+                { url: "/mock-address", text: "Products" },
               ]
             },
             {
               title: "About Us",
               links: [
-                { url: "index.html", text: "About Us" },
-                { url: "index.html", text: "Our team" },
-                { url: "index.html", text: "Careers" },
-                { url: "index.html", text: "Investors" },
+                { url: "/mock-address", text: "About Us" },
+                { url: "/mock-address", text: "Our team" },
+                { url: "/mock-address", text: "Careers" },
+                { url: "/mock-address", text: "Investors" },
               ]
             },
             {
               title: "Support",
               links: [
-                { url: "index.html", text: "Documentation" },
-                { url: "index.html", text: "Community" },
-                { url: "index.html", text: "Get in Touch" },
+                { url: "/mock-address", text: "Documentation" },
+                { url: "/mock-address", text: "Community" },
+                { url: "/mock-address", text: "Get in Touch" },
               ]
             },
           ],
