--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -29,7 +29,7 @@ html
       menu: [
         {
         text: "О нас",
-        link: "#about_us",
+        link: "/mock-address",
         classes: ["menu__item"]
         }, 
         {
@@ -38,23 +38,23 @@ html
         link: [
         {
           text: "First",
-          link: "#first",
+          link: "/mock-address",
           classes: ["submenu__item"]
         },
         {
           text: "Second",
-          link: "#second",
+          link: "/mock-address",
           classes: ["submenu__item"]
         }
         ]},
         {
         text: "Вакансии",
-        link: "#careers",
+        link: "/mock-address",
         classes: ["menu__item"]
         },
         {
         text: "Новости",
-        link: "#news",
+        link: "/mock-address",
         classes: ["menu__item"]
         },
         {
@@ -63,12 +63,12 @@ html
         link: [
           {
           text: "First",
-          link: "#first",
+          link: "/mock-address",
           classes: ["submenu__item"]
           },
           {
           text: "Second",
-          link: "#second",
+          link: "/mock-address",
           classes: ["submenu__item"]
           }
         ]
@@ -86,27 +86,27 @@ html
             {
               title: "Навигация",
               links: [
-                { url: "index.html", text: "О нас" },
-                { url: "index.html", text: "Новости" },
-                { url: "index.html", text: "Служба поддержки" },
-                { url: "index.html", text: "Услуги" },
+                { url: "/mock-address", text: "О нас" },
+                { url: "/mock-address", text: "Новости" },
+                { url: "/mock-address", text: "Служба поддержки" },
+                { url: "/mock-address", text: "Услуги" },
               ]
             },
             {
               title: "О нас",
               links: [
-                { url: "index.html", text: "О сервисе" },
-                { url: "index.html", text: "Наша команда" },
-                { url: "index.html", text: "Вакансии" },
-                { url: "index.html", text: "Инвесторы" },
+                { url: "/mock-address", text: "О сервисе" },
+                { url: "/mock-address", text: "Наша команда" },
+                { url: "/mock-address", text: "Вакансии" },
+                { url: "/mock-address", text: "Инвесторы" },
               ]
             },
             {
               title: "Служба поддержки",
               links: [
-                { url: "index.html", text: "Соглашения" },
-                { url: "index.html", text: "Сообщества" },
-                { url: "index.html", text: "Связь с нами" },
+                { url: "/mock-address", text: "Соглашения" },
+                { url: "/mock-address", text: "Сообщества" },
+                { url: "/mock-address", text: "Связь с нами" },
               ]
             },
           ],
