--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -12,7 +12,7 @@ block title
 block content
   .search-room.wrapper
     sidebar.search-room__sidebar
-      form.search-room-form(action="index.html", method="post")
+      form.search-room-form(action="/mock-address", method="post")
         .search-room__sidebar-item
           +date-dropdown({
             label: "Даты превыбания в отеле",
