--- a/src/blocks/booking-card/booking-card.pug
+++ b/src/blocks/booking-card/booking-card.pug
@@ -7,7 +7,7 @@ include ../long-button/long-button
 mixin booking-card()
   .booking-card
     .card-canvas
-      form.booking-card-form(action="index.html", method="post")
+      form.booking-card-form(action="/mock-address", method="post")
         .booking-card__header
           +apartment-info({number: 888, lux: true, big: true})
           +price("9 990")
