--- a/src/blocks/find-apartments-card/find-apartments-card.pug
+++ b/src/blocks/find-apartments-card/find-apartments-card.pug
@@ -5,7 +5,7 @@ mixin apartments()
   .find-apartments-card
     .card-canvas
       h1 Найдем номера под ваши пожелания
-      form.find-apartments-card-form(action="index.html", method="get")
+      form.find-apartments-card-form(action="/mock-address", method="get")
         .find-apartments-card__body
           .find-apartments-card__item.find-apartments-card__item--primary
             +range-dates({
