--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -1,9 +1,9 @@
 mixin pagination()
   .pagination
-    a.pagination__item.pagination__item--active(href="index.html") 1
-    a.pagination__item(href="index.html") 2
-    a.pagination__item(href="index.html") 3
+    a.pagination__item.pagination__item--active(href="/mock-address") 1
+    a.pagination__item(href="/mock-address") 2
+    a.pagination__item(href="/mock-address") 3
     .pagination__item ...
-    a.pagination__item(href="index.html") 15
+    a.pagination__item(href="/mock-address") 15
     button.pagination__next
     .pagination__info 1 &ndash; 12 из 100+ вариантов аренды
