#11 refactor palette mix

--- a/src/pages/colors-type/colors-and-fonts.pug
+++ b/src/pages/colors-type/colors-and-fonts.pug
@@ -5,62 +5,64 @@ html
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     img.logo(src="../img/logo.svg", alt="logo")
-    .color-types.wrapper
-      .palette.color-types__pallete
-        .color
-          .color__box.color__box--dark-shade-100
-          .color__description
-            .color__title Dark Shade 100%
-            .color__body #1F2041
-        .color
-          .color__box.color__box--dark-shade-75
-          .color__description
-            .color__title Dark Shade 75%
-            .color__body #1F2041
-        .color
-          .color__box.color__box--dark-shade-50
-          .color__description
-            .color__title Dark Shade 50%
-            .color__body #1F2041
-        .color
-          .color__box.color__box--dark-shade-25
-          .color__description
-            .color__title Dark Shade 25%
-            .color__body #1F2041
-        .color
-          .color__box.color__box--dark-shade-5
-          .color__description
-            .color__title Dark Shade 5%
-            .color__body #1F2041
-        .color
-          .color__box.color__box--purple
-          .color__description
-            .color__title Purple
-            .color__body #BC9CFF
-        .color
-          .color__box.color__box--green
-          .color__description
-            .color__title Green
-            .color__body #6FCF97
+    .wrapper
+      .color-types
+        .color-types__pallete
+          .palette
+            .color
+              .color__box.color__box--dark-shade-100
+              .color__description
+                .color__title Dark Shade 100%
+                .color__body #1F2041
+            .color
+              .color__box.color__box--dark-shade-75
+              .color__description
+                .color__title Dark Shade 75%
+                .color__body #1F2041
+            .color
+              .color__box.color__box--dark-shade-50
+              .color__description
+                .color__title Dark Shade 50%
+                .color__body #1F2041
+            .color
+              .color__box.color__box--dark-shade-25
+              .color__description
+                .color__title Dark Shade 25%
+                .color__body #1F2041
+            .color
+              .color__box.color__box--dark-shade-5
+              .color__description
+                .color__title Dark Shade 5%
+                .color__body #1F2041
+            .color
+              .color__box.color__box--purple
+              .color__description
+                .color__title Purple
+                .color__body #BC9CFF
+            .color
+              .color__box.color__box--green
+              .color__description
+                .color__title Green
+                .color__body #6FCF97
 
-      .color-types__types
-        .type
-          .type__head.type__head--big H1
-          .type__body
-            h1 This one is the sub-section or widget title
-        .type
-          .type__head.type__head--middle H2
-          .type__body
-            h2 
-              | Next one is the item title inside
-              br
-              | widgets
-        .type
-          .type__head.type__head--small H3
-          .type__body
-            h3 This is a label or CTA text
-        .type
-          .type__head Body
-          .type__body
-            | This is the body text which is used for most of the design, 
-            | like paragraphs, lists, etc.
+        .color-types__types
+          .type
+            .type__head.type__head--big H1
+            .type__body
+              h1 This one is the sub-section or widget title
+          .type
+            .type__head.type__head--middle H2
+            .type__body
+              h2 
+                | Next one is the item title inside
+                br
+                | widgets
+          .type
+            .type__head.type__head--small H3
+            .type__body
+              h3 This is a label or CTA text
+          .type
+            .type__head Body
+            .type__body
+              | This is the body text which is used for most of the design, 
+              | like paragraphs, lists, etc.
