#11 fix min in light-footer

--- a/src/blocks/light-footer/light-footer.pug
+++ b/src/blocks/light-footer/light-footer.pug
@@ -1,9 +1,10 @@
 include ../socials/socials
 
 mixin light-footer()
-  footer.light-footer.wrapper
-    .site-logo
-    .light-footer__content
-      | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
-      | eget nullam pellentesque aliquam curabitur cociis.
-    +socials()
+  .wrapper
+    footer.light-footer
+      .site-logo
+      .light-footer__content
+        | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
+        | eget nullam pellentesque aliquam curabitur cociis.
+      +socials()
