--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -9,8 +9,10 @@ mixin register-card()
       h1 Регистрация аккаунта
       form.register-card-form(action="/mock-address", method="post")
         .register-card__block
-          input.text-field(placeholder="Имя").register-card__item
-          input.text-field(placeholder="Фамилия").register-card__item
+          .register-card__item
+            input.text-field(placeholder="Имя")
+          .register-card__item
+            input.text-field(placeholder="Фамилия")
           +radio({ label: "Мужчина", name: "gender", checked: true })
           +radio({ label: "Женщина", name: "gender"})
         .register-card__block
@@ -18,8 +20,10 @@ mixin register-card()
           input.text-field(placeholder="ДД.ММ.ГГГГ").js-masked
         .register-card__block
           h3.register-card__label Данные для входа в сервис
-          input.text-field(placeholder="Email").register-card__item
-          input.text-field(placeholder="Пароль").register-card__item
+          .register-card__item
+            input.text-field(placeholder="Email")
+          .register-card__item
+            input.text-field(placeholder="Пароль")
           +toggle("Получать спецпредложения")
         .register-card__block
           +long-button("Перейти к оплате")
