--- a/src/blocks/color/color.scss
+++ b/src/blocks/color/color.scss
@@ -5,6 +5,7 @@
   padding-bottom: 20px;
   font-size: 1.1875rem;
   line-height: 1.8125rem;
+  color: $dark-shade-100;
 
   &__box {
     min-width: 70px;
