--- a/src/blocks/enter-card/enter-card.pug
+++ b/src/blocks/enter-card/enter-card.pug
@@ -4,7 +4,7 @@ include ../card-footer/card-footer
 mixin enter-card()  
   .enter-card
     .card-canvas
-      h1.enter-card__title Войти
+      h1.card-canvas__title Войти
       form.enter-card-form(action="/mock-address", method="post")
         .enter-card__field
           input.text-field(type="text" placeholder="Email")
