--- a/src/pages/colors-type/colors-and-fonts.pug
+++ b/src/pages/colors-type/colors-and-fonts.pug
@@ -49,18 +49,18 @@ html
           .type
             .type__head.type__head--big H1
             .type__body
-              h1 This one is the sub-section or widget title
+              h1.color-types__big This one is the sub-section or widget title
           .type
             .type__head.type__head--middle H2
             .type__body
-              h2 
+              h2.color-types__middle 
                 | Next one is the item title inside
                 br
                 | widgets
           .type
             .type__head.type__head--small H3
             .type__body
-              h3 This is a label or CTA text
+              h3.color-types__label This is a label or CTA text
           .type
             .type__head Body
             .type__body
