--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -44,6 +44,13 @@
     }
   }
 
+  &__subtitle {
+    font-family: Montserrat, Arial, sans-serif;
+    color: $dark-shade-100;
+    font-size: .75rem;
+    text-transform: uppercase;
+  }
+
   &__nav-container {
     display: flex;
     margin-left: 40px;
