--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -26,7 +26,7 @@ html
           .js-calendar
         .cards__item
           +image-card({
-            image: "../img/apartments_1.png",
+            image: "../img/apartments-1.png",
             arrows: true,
             position: 888,
             lux: true,
@@ -36,7 +36,7 @@ html
           })
         .cards__item
           +image-card({
-            image: "../img/apartments_2.png",
+            image: "../img/apartments-2.png",
             arrows: false,
             position: 840,
             lux: false,
