--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -11,9 +11,9 @@ block title
 
 block content
   +hero-galery([
-    "../img/hero_galery/image.png",
-    "../img/hero_galery/image_2.png",
-    "../img/hero_galery/image_3.png"
+    "../img/hero-galery/image.png",
+    "../img/hero-galery/image-2.png",
+    "../img/hero-galery/image-3.png"
   ])
   .wrapper
     .room-details
